plugin/tests/snapshots/render_snapshots__render_input_branch_with_wrapped_status.snap
---
source: tests/render_snapshots.rs
expression: output
---
[?1049h[H[2J[1m[36m zelligent ───────────────────────────────────────[0m

  [1mNew branch name:[0m

  > [7m [0m










[31m  Only worktree tabs can be removed from the[0m
[31m  sidebar[0m

  [2mEnter[0m create  [2mEsc[0m back
  [2mVERSION                               [0m
