plugin/tests/snapshots/render_snapshots__render_loading_mode.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 20, 80)"
---
[?1049h[H[2J[1m[36m zelligent / loading... ────────────────────────────────────────────────────────[0m

  Waiting for permissions...
















  [2mVERSION                                                             [0m
