plugin/tests/snapshots/render_snapshots__render_loading_with_error.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 20, 80)"
---
[?1049h[H[2J[1m[36m loading... ────────────────────────────────────────────────────────────────────[0m

  [31mPermission denied[0m
















  [2mVERSION                                                             [0m
