plugin/tests/snapshots/render_snapshots__render_not_git_repo.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 20, 80)"
---
[?1049h[H[2J[1m[36m error ─────────────────────────────────────────────────────────────────────────[0m

  [1m[31mNot a git repository.[0m
  [2mCurrent directory: /tmp/foo[0m

  [2md[0m  save layout to disk
  [2mx[0m  nuke session & start fresh
  [2mq[0m  close plugin









  [31m/tmp/foo is not a git repo: fatal: not a git repository[0m

  [2mVERSION                                                             [0m
