plugin/tests/snapshots/render_snapshots__render_select_branch_annotations.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 20, 80)"
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────────────────────────────────────────[0m

  [1mSelect a branch:[0m

[36m▌[0m feat-a[2m (open)[0m
  feat-b[2m (worktree)[0m
  feat-c











  [2m↑/k[0m up  [2m↓/j[0m down  [2mEnter[0m create  [2mEsc[0m back
  [2mVERSION                                                             [0m
