plugin/tests/snapshots/render_snapshots__render_select_branch_zero_matches.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 20, 80)"
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────────────────────────────────────────[0m

  [2mNo branches match 'zzz'.[0m















  [2m↑/↓[0m move  type to filter  [2mEnter[0m create  [2mEsc[0m back
  [2mVERSION                                                             [0m
